Commit without ellipse

--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@ a {
     text-decoration:none;
     color: #FFFFFF;
 }
+body{
+    margin: 0;
+}
 .rectangle{
-    position: absolute;
+    /*osition: absolute;*/
     width: 100%;
     height: 141px;
     left: 0px;
@@ -25,18 +28,18 @@ a {
     float: right;
 }
 .logo{
-    position: static;
+    /*position: static;*/
     float:left;
     margin-left: 79px;
     margin-top: 37px;/* отступ 26px + отступ 11px внутри дива логотипа */
     box-sizing: border-box;
 }
 .line{
-    position: absolute;
+    /*position: absolute;*/
     width: 100%;
     height: 44px;
     top: 141px;
-    left: 0;
+    left: 0px;
     border-bottom: 1px solid #888888;
     box-sizing: border-box;
 }
