--- a/style.css
+++ b/style.css
@@ -7,60 +7,43 @@ a {
 body {
     margin: 0px;
 }
-.rectangle {
+.header {
     width: 100%;
     height: 141px;
-    background: #888888;   
+    background: #888888;
+    display: flex;
+    flex-direction: row;
+    align-items: center;  
 }
 .left_part {
+    display: flex;
+    align-items: center;
+    margin-left: 79px;
     width: 50%;
-    height: 100%;
-    box-sizing: border-box;
-    float: left;
 }
 .right_part {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 59px;
     width: 50%;
-    height: 100%;
-    box-sizing: border-box;
-    float: right;
-}
-.logo {
-    float:left;
-    margin-left: 79px;
-    margin-top: 37px;
-    box-sizing: border-box;
-}
-.line {
-    width: 100%;
-    height: 44px;
-    top: 141px;
-    left: 0;
-    border-bottom: 1px solid #888888;
-    box-sizing: border-box;
+    height: 70px;
 }
 .left_part_text {
-    width: 312px;
-    height: 50px;
-    float: left;
-    margin-left: 38.16px; 
-    margin-top: 41px;
-    left: 25px;
+    margin-left: 40px; 
     font-size: 48px;
     font-family: Roboto;
     Font-style: bold;
     color: #FFFFFF;
-    box-sizing: border-box;
-}
+}    
 .right_part_text {
-    float: right;
-    margin-top: 54px;
     font-size: 24px;
     font-family: Roboto;
     color: #FFFFFF;
 }
 .basket {
-    margin-right: 59px;
-    margin-top: 49px;
+    display: flex;
+    justify-content: end;
 }
 .ellipse {
     width: 32px;
@@ -68,11 +51,9 @@ body {
     border: solid 1px #F34141;
     border-radius: 16px;
     background-color: #F34141;
-    float: right;
+    margin-right: -9px;
     position: absolute;
-    top: 49px;
-    right: 50px;
-    display:none;   
+    display: none;
 }
 .count{
     width: 32px;
@@ -83,81 +64,78 @@ body {
     text-align: center;
     box-sizing: border-box;
 }
-.registration {
-    width: 272px;
+.line {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 44px;
+    top: 141px;
+    border-bottom: 1px solid #888888;
 }
-.about {
-    width: 121px;
+.inLine{
+    display: flex;
+    justify-content: space-between;
+    width: 40%;
+    align-items: center;
 }
-.help {
-    width: 155px;
-}
-.promo {
-    float: left;
-    margin-left: 393px;
-    margin-top: 12px;
+.lineText{
     font-size: 18px;
     font-family: Roboto;
     font-style: normal;
     color: #888888;
 }
-.start_shopping {
-    float: left;
-    margin-left: 62px;
-    margin-top: 12px;
-    font-size: 18px;
-    font-family: Roboto;
-    font-style: normal;
-    color: #888888;
+.goodsContainer {
+    width: 60%;
+    margin-left: 20%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-.goods {
-    position: relative;
-    left: 13px;
-    width: 1252px;
-}
-.goods__product {
-    float: left;
+.goodsProduct {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 387px;
     height: 500px;
-    margin: 85px 0px 28px 239px;
     border: solid 1px #888888;
     border-radius: 15px;
-    box-sizing: border-box;
+    margin-top: 85px;
+    margin-bottom: 28px;
 }
 .pic {
     height: 258px;
-    margin: 38px 117px 29px 117px;
+    margin-top: 38px;
+    margin-bottom: 23px;
 }
 .goods__text {
-    box-sizing: border-box;
-    float: left;
     width: 286px;
     height: 83px;
-    margin-left: 51px;
     text-align: center;
     font-size: 24px;
     font-family: Roboto;
     color: #888888;
 }
 .goods__button {
-    box-sizing: border-box;
     width: 276px;
     height: 62px;
     border-radius: 5px;
-    float: left;
-    margin-left: 56px;
-    text-align: center;
     font-size: 24px;
     font-family: Roboto;
     color: #FFFFFF;
     background-color: #888888;
     border: 1px solid #888888;
 }
-.dispno {
-    display: none;
+.visibility {
+    /*display: none;*/
+    visibility: hidden;
 }
-.goods__product:hover .goods__button {
-    display:block;
+.goodsProduct:hover .goods__button {
+    visibility: visible;
+}
+.footer {
+    width: 100%;
+    height: 275px;  
 }
 
 
